--- a/2122BTR/MainWindow.xaml
+++ b/2122BTR/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="900" Width="1600">
     <Grid>
         <Button x:Name="btnCustomers" Content="Klanten" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Height="50" Click="btnCustomers_Click"/>
-        <Button Content="Producten" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" Width="100" Height="50"/>
+        <Button x:Name="btnProducts" Content="Producten" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" Width="100" Height="50" Click="btnProducts_Click"/>
         <Button Content="Bestellingen" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Width="100" Height="50"/>
         <Button Content="Factuur" HorizontalAlignment="Left" Margin="325,10,0,0" VerticalAlignment="Top" Width="100" Height="50"/>
         <Frame x:Name="frMain" Content="" HorizontalAlignment="Left" Height="809" Margin="0,60,0,0" VerticalAlignment="Top" Width="1592" NavigationUIVisibility="Hidden"/>
